1. Pages overlap problem solved. 2. Response should have a max-width equal to the first response bubble, solved. 3. Red box should only have scrolling. Blue box is fixed. Now it's like the whole chat box is scrollable and input is sticky! 4. Animation for showing loading state in chatbot after hitting the backend API. 5. Processing UI and functionality solved the bugs.

--- a/mayan/apps/appearance/static/css/chat.css
+++ b/mayan/apps/appearance/static/css/chat.css
@@ -68,7 +68,7 @@
 }
 
 .outer-container {
-    min-height: 564px;
+    min-height: 479px;
     bottom: 0%;
     position: relative;
 }
@@ -110,7 +110,7 @@
     width: 100%;
     align-items: center;
     background-color: #ffffff;
-    position: sticky;
+    position: fixed;
     bottom: 0;
 }
 
